--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "require": {
         "php": ">=7.0",
         "ekyna/commerce-bundle": "0.7.x-dev",
-        "ekyna/dpd": "1.0.x-dev"
+        "ekyna/dpd": "^1.0"
     },
     "autoload": {
         "psr-4": {
